# gitsummary

./: .gitignore  CHANGELOG.md  README.md  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: publish-to-test-pypi.yml
gitinfo/: __init__.py
gitsummary/: gitsummary.py
tests/: test_print_git_summary.py
