[metadata]
name = gitsummary-Timothy-W-Hilton
version = 0.0.1
author = Timothy W. Hilton
author_email = t.hilton@gns.cri.nz
description = print a one-list summary of the current git repository, the current branch, and the hash for the current head
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = gitsummary
packages = find:
python_requires = >=3.6
